<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/tex1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_app"
        android:id="@+id/textView2"
        android:textColor="#ffffffff"
        android:layout_margin="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_1_text"
        android:id="@+id/next_button"
        android:onClick="goGetName"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nice_text_view"
        android:textColor="#ffffffff"
        android:layout_marginTop="20dp"
        android:id="@+id/name_nice_message"
        />

</LinearLayout>
