<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_is_name_text"
            android:hint="John Doe"/>
        <EditText
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:id="@+id/name_edit_text"
            android:inputType="textPersonName|textCapWords|textNoSuggestions"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_enter_text"
        android:onClick="SendName"/>

    <TextView
        android:id="@+id/call_act_info_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_act_text_view"/>


    </LinearLayout>



</LinearLayout>
